test/expected/reinterpret_cast_v.out
reinterpret cast x into void
                        ^
25: error: reinterpret_cast can not be to void
